Fixed link size on mobile

--- a/assets/sass/components/_artist-presentation.scss
+++ b/assets/sass/components/_artist-presentation.scss
@@ -83,7 +83,7 @@
   .artist-links {
     .artist-link-wrapper {
       display: grid;
-      grid-template-columns: repeat(2, minmax(150px, 1fr));
+      grid-template-columns: repeat(2, minmax(80px, 1fr));
     }
     .artist-link {
       display: flex;
@@ -98,6 +98,10 @@
         font-size: 0.9em;
         transition: all 0.2s;
       }
+    }
+
+    .artist-link:last-of-type {
+      margin-right:0;
     }
 
     .artist-link:hover {
